--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-import-modal/common-import-modal.component.scss
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-import-modal/common-import-modal.component.scss
@@ -9,6 +9,10 @@
     margin-bottom: 0;
   }
 
+  .validation-message-padding {
+    margin-top: 5px;
+  }
+
   .spinner {
     width: 100%;
     margin: auto;
