create separate card for global exclude segments

--- a/frontend/projects/upgrade/src/app/features/dashboard/segments/pages/segment-root-page/segment-root-page-content/segment-root-page-content.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments/pages/segment-root-page/segment-root-page-content/segment-root-page-content.component.html
@@ -1,3 +1,4 @@
 <app-common-section-card-list>
+  <app-segment-global-section-card section-card></app-segment-global-section-card>
   <app-segment-root-section-card section-card></app-segment-root-section-card>
 </app-common-section-card-list>
