--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-details-participant-list-table/common-details-participant-list-table.component.html
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-details-participant-list-table/common-details-participant-list-table.component.html
@@ -22,11 +22,13 @@
         {{ PARTICIPANT_LIST_TRANSLATION_KEYS.VALUES | translate }}
       </th>
       <td mat-cell *matCellDef="let rowData" class="values-column ft-14-400">
-        <ng-container *ngIf="rowData.listType !== memberTypes.SEGMENT && rowData.segment">
+        <ng-container *ngIf="rowData.segment">
           {{
-            (rowData.listType === memberTypes.INDIVIDUAL
-              ? rowData.segment.individualForSegment.length
-              : rowData.segment.groupForSegment.length) + ' Values'
+            (rowData.listType.toLowerCase() === memberTypes.INDIVIDUAL.toLowerCase()
+              ? rowData.segment.individualForSegment?.length
+              : rowData.listType.toLowerCase() === memberTypes.SEGMENT.toLowerCase()
+              ? rowData.segment.subSegments?.length
+              : rowData.segment.groupForSegment?.length) + ' Values'
           }}
         </ng-container>
       </td>
