--- a/frontend/projects/upgrade/src/app/features/dashboard/segments/pages/segment-root-page/segment-root-page-content/segment-root-section-card/segment-root-section-card-table/segment-root-section-card-table.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments/pages/segment-root-page/segment-root-page-content/segment-root-section-card/segment-root-section-card-table/segment-root-section-card-table.component.html
@@ -37,12 +37,12 @@
 
     <!-- Status Column -->
     <ng-container [matColumnDef]="SEGMENT_ROOT_COLUMN_NAMES.STATUS">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header class="status-column ft-14-600">
+      <th mat-header-cell *matHeaderCellDef class="status-column ft-14-600">
         {{ SEGMENT_TRANSLATION_KEYS.STATUS | translate }}
       </th>
       <td mat-cell *matCellDef="let segment" class="status-column ft-14-400">
-        <app-common-status-indicator-chip
-          [chipClass]="segment.status.toLowerCase()"> <!-- TODO: Update the SEGMENT_STATUS enum to lowercase and remove toLowerCase() once the legacy Segments code is removed -->
+        <app-common-status-indicator-chip [chipClass]="segment.status.toLowerCase()">
+          <!-- TODO: Update the SEGMENT_STATUS enum to lowercase and remove toLowerCase() once the legacy Segments code is removed -->
         </app-common-status-indicator-chip>
       </td>
     </ng-container>
@@ -91,7 +91,9 @@
         {{ SEGMENT_TRANSLATION_KEYS.LISTS | translate }}
       </th>
       <td mat-cell *matCellDef="let segment" class="lists-column ft-14-400">
-        <span class="list-count">{{ segment.groupForSegment?.length + segment.individualForSegment?.length + segment.subSegments?.length }}</span>
+        <span class="list-count">{{
+          segment.groupForSegment?.length + segment.individualForSegment?.length + segment.subSegments?.length
+        }}</span>
       </td>
     </ng-container>
 
