--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-details-participant-list-table/common-details-participant-list-table.component.html
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-details-participant-list-table/common-details-participant-list-table.component.html
@@ -24,9 +24,9 @@
       <td mat-cell *matCellDef="let rowData" class="values-column ft-14-400">
         <ng-container *ngIf="rowData.segment">
           {{
-            (rowData.listType.toLowerCase() === memberTypes.INDIVIDUAL.toLowerCase()
+            (rowData.listType?.toLowerCase() === memberTypes.INDIVIDUAL.toLowerCase()
               ? rowData.segment.individualForSegment?.length
-              : rowData.listType.toLowerCase() === memberTypes.SEGMENT.toLowerCase()
+              : rowData.listType?.toLowerCase() === memberTypes.SEGMENT.toLowerCase()
               ? rowData.segment.subSegments?.length
               : rowData.segment.groupForSegment?.length) + ' Values'
           }}
