section card title

--- a/frontend/projects/upgrade/src/app/features/dashboard/segments/pages/segment-details-page/segment-details-page-content/segment-lists-section-card/segment-lists-section-card.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments/pages/segment-details-page/segment-details-page-content/segment-lists-section-card/segment-lists-section-card.component.html
@@ -2,7 +2,7 @@
   <!-- header-left -->
   <app-common-section-card-title-header
     header-left
-    [title]="'segments.details.lists.card.title.text' | translate"
+    [title]="title | translate"
     [subtitle]="'segments.details.lists.card.subtitle.text' | translate"
     [tableRowCount]="tableRowCount$ | async"
   ></app-common-section-card-title-header>
