Add Used By Count to Section Card Header

--- a/frontend/projects/upgrade/src/app/features/dashboard/segments/pages/segment-details-page/segment-details-page-content/segment-used-by-section-card/segment-used-by-section-card.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments/pages/segment-details-page/segment-details-page-content/segment-used-by-section-card/segment-used-by-section-card.component.html
@@ -4,6 +4,7 @@
     header-left
     [title]="'segments.details.used-by.card.title.text' | translate"
     [subtitle]="'segments.details.used-by.card.subtitle.text' | translate"
+    [tableRowCount]="tableRowCount$ | async"
   ></app-common-section-card-title-header>
 
   <!-- header-right -->
