Truncate Lengthy Tags on Root/Details Pages

--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-root-page/feature-flag-root-page-content/feature-flag-root-section-card/feature-flag-root-section-card-table/feature-flag-root-section-card-table.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-root-page/feature-flag-root-page-content/feature-flag-root-section-card/feature-flag-root-section-card-table/feature-flag-root-section-card-table.component.html
@@ -85,7 +85,12 @@
             class="tag"
             (click)="filterFeatureFlagByChips(tag, FeatureFlagSearchKey.TAG)"
           >
-            <span class="chip-label">{{ tag }}</span>
+          <span
+            class="chip-label"
+            [matTooltip]="tag.length > 16 ? tag : null"
+            matTooltipPosition="above">
+              {{ tag | truncate : 16 }}
+          </span>
           </mat-chip>
         </mat-chip-listbox>
       </td>
