--- a/frontend/projects/upgrade/src/app/features/dashboard/segments/pages/segment-root-page/segment-root-page-content/segment-root-section-card/segment-root-section-card-table/segment-root-section-card-table.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments/pages/segment-root-page/segment-root-page-content/segment-root-section-card/segment-root-section-card-table/segment-root-section-card-table.component.html
@@ -84,7 +84,12 @@
             class="tag"
             (click)="filterSegmentByChips(tag, SegmentSearchKey.TAG)"
           >
-            <span class="chip-label">{{ tag }}</span>
+          <span
+            class="chip-label"
+            [matTooltip]="tag.length > 16 ? tag : null"
+            matTooltipPosition="above">
+              {{ tag | truncate : 16 }}
+          </span>
           </mat-chip>
         </mat-chip-listbox>
       </td>
