--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-section-card-overview-details/common-section-card-overview-details.component.html
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-section-card-overview-details/common-section-card-overview-details.component.html
@@ -3,17 +3,12 @@
     <div class="item-key-value">
       <span class="ft-14-600">{{ item.key }}:</span>
       <span *ngIf="item.key !== 'Tags'" class="ft-14-400 item-value">{{ item.value }}</span>
-      <mat-chip-listbox *ngIf="item.key === 'Tags'" class="chips-container">
-        <mat-chip *ngFor="let tag of item.value">
-          <span
-            class="chip-label"
-            (click)="searchByTag(tag)"
-            [matTooltip]="tag.length > 16 ? tag : null"
-            matTooltipPosition="above">
-              {{ tag | truncate : 16 }}
-          </span>
-        </mat-chip>
-      </mat-chip-listbox>
+      <app-common-tag-list
+        *ngIf="item.key === 'Tags'"
+        class="chips-container"
+        [tags]="item.value"
+        (tagClick)="searchByTag($event)"
+      ></app-common-tag-list>
     </div>
   </div>
 </div>
