--- a/frontend/projects/upgrade/src/app/features/dashboard/segments/pages/segment-details-page/segment-details-page-content/segment-lists-section-card/segment-lists-section-card.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments/pages/segment-details-page/segment-details-page-content/segment-lists-section-card/segment-lists-section-card.component.html
@@ -3,7 +3,7 @@
   <app-common-section-card-title-header
     header-left
     [title]="title | translate"
-    [subtitle]="'segments.details.lists.card.subtitle.text' | translate"
+    [subtitle]="subtitle | translate"
     [tableRowCount]="tableRowCount$ | async"
   ></app-common-section-card-title-header>
 
@@ -11,11 +11,11 @@
   <app-common-section-card-action-buttons
     header-right
     [showPrimaryButton]="(permissions$ | async)?.segments.update"
-    [primaryButtonText]="'segments.details.add-list.button.text' | translate"
+    [primaryButtonText]="buttonText | translate"
     [showMenuButton]="(permissions$ | async)?.segments.update"
     [menuButtonItems]="menuButtonItems"
     [isSectionCardExpanded]="isSectionCardExpanded"
-    (primaryButtonClick)="onAddListClick(segment.context, segment.id)"
+    (primaryButtonClick)="onAddListClick(segment.context, segment.id, segment.type)"
     (menuButtonItemClick)="onMenuButtonItemClick($event, segment)"
     (sectionCardExpandChange)="onSectionCardExpandChange($event)"
   >
