--- a/frontend/projects/upgrade/src/app/features/dashboard/segments/pages/segment-root-page/segment-root-page-content/segment-root-section-card/segment-root-section-card-table/segment-root-section-card-table.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments/pages/segment-root-page/segment-root-page-content/segment-root-section-card/segment-root-section-card-table/segment-root-section-card-table.component.html
@@ -78,15 +78,11 @@
         {{ SEGMENT_TRANSLATION_KEYS.TAGS | translate }}
       </th>
       <td mat-cell *matCellDef="let segment" class="tags-column ft-14-400 dense-2">
-        <mat-chip-listbox aria-label="Segment tags">
-          <mat-chip
-            *ngFor="let tag of segment.tags"
-            class="tag"
-            (click)="filterSegmentByChips(tag, SegmentSearchKey.TAG)"
-          >
-            <span class="chip-label">{{ tag }}</span>
-          </mat-chip>
-        </mat-chip-listbox>
+        <app-common-tag-list
+          [tags]="segment.tags"
+          ariaLabel="Segment tags"
+          (tagClick)="filterSegmentByChips($event, SegmentSearchKey.TAG)"
+        ></app-common-tag-list>
       </td>
     </ng-container>
 
