--- a/frontend/projects/upgrade/src/app/features/dashboard/segments/pages/segment-root-page/segment-root-page-content/segment-global-section-card/segment-global-section-card-table/segment-global-section-card-table.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments/pages/segment-root-page/segment-root-page-content/segment-global-section-card/segment-global-section-card-table/segment-global-section-card-table.component.html
@@ -37,7 +37,7 @@
 
     <!-- Status Column -->
     <ng-container [matColumnDef]="SEGMENT_ROOT_COLUMN_NAMES.STATUS">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header class="status-column ft-14-600">
+      <th mat-header-cell *matHeaderCellDef class="status-column ft-14-600">
         {{ SEGMENT_TRANSLATION_KEYS.STATUS | translate }}
       </th>
       <td mat-cell *matCellDef="let segment" class="status-column ft-14-400">
