--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-tag-list/common-tag-list.component.html
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-tag-list/common-tag-list.component.html
@@ -1,7 +1,13 @@
-<mat-chip-listbox [attr.aria-label]="ariaLabel">
+<mat-chip-listbox [attr.aria-label]="ariaLabel" *ngIf="tags && tags.length > 0">
   <app-common-tag
-    *ngFor="let tag of tags"
+    *ngFor="let tag of visibleTags"
     [tag]="tag"
     (tagClick)="onTagClick($event)">
   </app-common-tag>
+  <mat-chip
+    *ngIf="shouldShowMoreChip"
+    (click)="toggleExpanded()"
+  >
+    <span class="chip-label">+{{ hiddenTagsCount }}</span>
+  </mat-chip>
 </mat-chip-listbox>
