--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-root-page/feature-flag-root-page-content/feature-flag-root-section-card/feature-flag-root-section-card.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-root-page/feature-flag-root-page-content/feature-flag-root-section-card/feature-flag-root-section-card.component.html
@@ -35,6 +35,8 @@
           [dataSource$]="dataSource$ | async"
           [isLoading$]="isLoadingFeatureFlags$"
           [isSearchActive$]="isSearchActive$"
+          [expandedTagsMap]="expandedTagsMap"
+          (tagsExpanded)="onTagsExpanded($event.flagId, $event.expanded)"
         >
         </app-feature-flag-root-section-card-table>
       </div>
