--- a/frontend/projects/upgrade/src/app/features/dashboard/segments/pages/segment-root-page/segment-root-page-content/segment-root-section-card/segment-root-section-card.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments/pages/segment-root-page/segment-root-page-content/segment-root-section-card/segment-root-section-card.component.html
@@ -35,6 +35,8 @@
           [dataSource$]="dataSource$ | async"
           [isLoading$]="isLoadingSegments$"
           [isSearchActive$]="isSearchActive$"
+          [expandedTagsMap]="expandedTagsMap"
+          (tagsExpanded)="onTagsExpanded($event.segmentId, $event.expanded)"
         >
         </app-segment-root-section-card-table>
       </div>
