Display the name and description tooltips on the right

--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-root-page/feature-flag-root-page-content/feature-flag-root-section-card/feature-flag-root-section-card-table/feature-flag-root-section-card-table.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-root-page/feature-flag-root-page-content/feature-flag-root-section-card/feature-flag-root-section-card-table/feature-flag-root-section-card-table.component.html
@@ -19,7 +19,7 @@
         <a
           [routerLink]="['/featureflags', 'detail', flag.id]"
           [matTooltip]="flag.name.length > 24 ? flag.name : null"
-          matTooltipPosition="above"
+          matTooltipPosition="right"
           class="flag-name"
         >
           {{ flag.name | truncate : 24 }}
@@ -27,7 +27,7 @@
         <br />
         <span
           [matTooltip]="flag.description?.length > 35 ? flag.description : null"
-          matTooltipPosition="above"
+          matTooltipPosition="right"
           class="flag-description ft-10-400"
         >
           {{ flag.description | truncate : 35 }}
