--- a/frontend/projects/upgrade/src/styles/variables.scss
+++ b/frontend/projects/upgrade/src/styles/variables.scss
@@ -17,7 +17,7 @@
   --status-enrollment-complete: #33cc66;
   --status-cancelled: #ff3333;
   --status-archived: #999999;
-  --status-global: #ff3333;
+  --status-excluded: #ff3333;
   --status-unused: #999999;
   --status-used: #3366ff;
   --status-disabled-alpha: #ff99330c;
@@ -28,7 +28,7 @@
   --status-enrollment-complete-alpha: #33cc660c;
   --status-cancelled-alpha: #ff33330c;
   --status-archived-alpha: #9999990c;
-  --status-global-alpha: #ff33330c;
+  --status-excluded-alpha: #ff33330c;
   --status-unused-alpha: #9999990c;
   --status-used-alpha: #3366ff0c;
 
