--- a/frontend/projects/upgrade/src/app/features/dashboard/home/pages/view-experiment/view-experiment.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/pages/view-experiment/view-experiment.component.html
@@ -1,8 +1,9 @@
 <mat-card appearance="raised" class="experiment-container" *ngIf="experiment">
-  <span class="ft-16-400">
-    <a [routerLink]="['/home']" class="ft-16-400 experiment-link"
-      >{{ 'home.view-experiment.experiments.text' | translate }}
+  <span class="ft-14-400">
+    <a [routerLink]="['/home']" class="ft-14-400 experiment-link">
+      {{ 'home.view-experiment.experiments.text' | translate }}
     </a>
+    >
     <b> {{ experiment?.name }} </b>
   </span>
   <mat-card appearance="raised" class="experiment">
