--- a/frontend/projects/upgrade/src/app/features/dashboard/segments-legacy/components/modal/segment-experiment-list/segment-experiment-list.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments-legacy/components/modal/segment-experiment-list/segment-experiment-list.component.html
@@ -65,7 +65,7 @@
                 </span>
               </div>
               <span class="experiment-schedule ft-10-400" *ngIf="element.experimentState === ExperimentState.SCHEDULED">
-                {{ '(' + (experiment.startOn | date : 'MMM d, y h:mm a') + ')' }}
+                {{ '(' + (experiment.startOn | date : 'MMM d, y, h:mm a') + ')' }}
               </span>
             </mat-cell>
           </ng-container>
