--- a/frontend/projects/upgrade/src/app/features/dashboard/segments-legacy/components/segments-list/segments-list.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments-legacy/components/segments-list/segments-list.component.scss
@@ -80,7 +80,7 @@
 
     .cdk-column-name,
     .cdk-column-status,
-    .cdk-column-lastUpdate,
+    .cdk-column-updatedAt,
     .cdk-column-context {
       width: 15%;
     }
