--- a/frontend/projects/upgrade/src/app/features/dashboard/segments-legacy/pages/view-segment/view-segment.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments-legacy/pages/view-segment/view-segment.component.scss
@@ -88,13 +88,13 @@ $font-size-small: 15px;
       color: var(--grey-3);
     }
 
-    &-create-date {
+    &-created-date {
       display: block;
       padding-top: 23px;
       color: var(--grey-5);
     }
 
-    &-update-date {
+    &-updated-date {
       display: block;
       padding-bottom: 23px;
       color: var(--grey-5);
