--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/modal/post-experiment-rule/post-experiment-rule.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/modal/post-experiment-rule/post-experiment-rule.component.html
@@ -3,7 +3,7 @@
   <form [formGroup]="postExperimentRuleForm" class="experiment-rule-form">
     <mat-form-field class="dense-2" appearance="outline" subscriptSizing="dynamic">
       <mat-label class="ft-14-400">
-        {{ 'home-global.post-experiment-rule.text' | translate }}
+        {{ 'home-global.post-experiment-rule.text' | translate | titlecase }}
       </mat-label>
       <mat-select class="ft-14-400" formControlName="postExperimentRule">
         <mat-option class="ft-14-400" *ngFor="let rule of postExperimentRules" [value]="rule.value">
