--- a/frontend/projects/upgrade/src/app/features/dashboard/home/pages/view-experiment/view-experiment.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/pages/view-experiment/view-experiment.component.scss
@@ -80,11 +80,11 @@ $font-size-small: 15px;
           color: var(--grey-5);
         }
 
-        &-create-date {
+        &-created-date {
           display: block;
         }
 
-        &-last-update-date {
+        &-updated-date {
           display: block;
         }
       }
