--- a/frontend/projects/upgrade/src/app/features/dashboard/segments/pages/segment-details-page/segment-details-page-content/segment-used-by-section-card/segment-used-by-table/segment-used-by-table.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments/pages/segment-details-page/segment-details-page-content/segment-used-by-section-card/segment-used-by-table/segment-used-by-table.component.html
@@ -42,7 +42,7 @@
         {{ USED_BY_TRANSLATION_KEYS.UPDATED_AT | translate }}
       </th>
       <td mat-cell *matCellDef="let item" class="updated-at-column ft-14-400">
-        {{ item.updatedAt | date : 'MMM d, y h:mm a' }}
+        {{ item.updatedAt | date : 'MMM d, y, h:mm a' }}
       </td>
     </ng-container>
 
