--- a/frontend/projects/upgrade/src/app/features/dashboard/segments/pages/segment-root-page/segment-root-page-content/segment-global-section-card/segment-global-section-card-table/segment-global-section-card-table.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments/pages/segment-root-page/segment-root-page-content/segment-global-section-card/segment-global-section-card-table/segment-global-section-card-table.component.html
@@ -53,7 +53,7 @@
         {{ SEGMENT_TRANSLATION_KEYS.UPDATED_AT | translate }}
       </th>
       <td mat-cell *matCellDef="let segment" class="updated-at-column ft-14-400">
-        {{ segment.updatedAt | date : 'MMM d, y h:mm a' }}
+        {{ segment.updatedAt | date : 'MMM d, y, h:mm a' }}
       </td>
     </ng-container>
 
