Update the date formatting on experiment root page and adjust the column widths

--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-list/experiment-list.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-list/experiment-list.component.html
@@ -205,7 +205,7 @@
           >
         </th>
         <td class="ft-12-600" mat-cell *matCellDef="let experiment">
-          {{ experiment.updatedAt | formatDate }}
+          {{ experiment.updatedAt | date : 'MMM d, y, h:mm a' }}
         </td>
       </ng-container>
 
