Link for Public Segment within the Lists table on Feature Flags and Segments details page

--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-details-participant-list-table/common-details-participant-list-table.component.scss
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-details-participant-list-table/common-details-participant-list-table.component.scss
@@ -71,6 +71,10 @@
 
     .name-column {
       width: 25%;
+
+      .segment-name {
+        color: var(--black-2);
+      }
     }
 
     .enable-column {
