Add optional truncation to CommonTagsInputComponent

--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/modals/upsert-feature-flag-modal/upsert-feature-flag-modal.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/modals/upsert-feature-flag-modal/upsert-feature-flag-modal.component.html
@@ -69,6 +69,7 @@
       [inputType]="CommonTagInputType.TAGS"
       [label]="config.tagsLabel"
       [placeholder]="config.tagsPlaceholder"
+      [enableTruncation]="true"
     ></app-common-tags-input>
   </form>
 </app-common-dialog>
