--- a/frontend/projects/upgrade/src/app/features/dashboard/segments/modals/upsert-segment-modal/upsert-segment-modal.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments/modals/upsert-segment-modal/upsert-segment-modal.component.html
@@ -61,6 +61,7 @@
       [inputType]="CommonTagInputType.TAGS"
       [label]="config.tagsLabel"
       [placeholder]="config.tagsPlaceholder"
+      [enableTruncation]="true"
     ></app-common-tags-input>
   </form>
 </app-common-dialog>
