Make tag truncation length configurable in CommonTagsInputComponent

--- a/frontend/projects/upgrade/src/app/features/dashboard/segments/modals/upsert-private-segment-list-modal/upsert-private-segment-list-modal.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments/modals/upsert-private-segment-list-modal/upsert-private-segment-list-modal.component.html
@@ -46,6 +46,7 @@
         [label]="config.valuesLabel"
         [placeholder]="config.valuesPlaceholder"
         [forceValidation]="forceValidation"
+        [truncationLength]="72"
         (downloadRequested)="onDownloadRequested($event)"
         (blur)="onBlur()"
       ></app-common-tags-input>
