--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-tag-input/common-tag-input.component.html
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-tag-input/common-tag-input.component.html
@@ -20,10 +20,10 @@
         >
           <span
             class="chip-label"
-            [matTooltip]="enableTruncation && componentTag.length > 16 ? componentTag : null"
+            [matTooltip]="componentTag.length > truncationLength ? componentTag : null"
             matTooltipPosition="above"
           >
-              {{ enableTruncation ? (componentTag | truncate : 16) : componentTag }}
+              {{ componentTag | truncate : truncationLength }}
           </span>
           <mat-icon matChipRemove *ngIf="isChipRemovable">cancel</mat-icon>
         </mat-chip-row>
