Refactor search input handling to use ngModelChange for better Angular idiom

--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-list/experiment-list.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-list/experiment-list.component.html
@@ -19,7 +19,7 @@
             matInput
             [(ngModel)]="searchValue"
             (keyup)="onSearchInputKeyup($event)"
-            (input)="onSearchInputChange($event)"
+            (ngModelChange)="onSearchInputChange($event)"
             [placeholder]="'global.search.text' | translate"
           />
         </div>
@@ -29,7 +29,7 @@
             matInput
             [(ngModel)]="searchValue"
             (keyup)="onSearchInputKeyup($event)"
-            (input)="onSearchInputChange($event)"
+            (ngModelChange)="onSearchInputChange($event)"
             [placeholder]="'global.search.text' | translate"
             [matAutocomplete]="autoCompleteStatus"
           />
